try to fix widget overlaping on index screen

--- a/templates/static/main.css
+++ b/templates/static/main.css
@@ -75,7 +75,7 @@ a{text-decoration: #242424;color: #bbbbbb; }
 }
 .widget_bar{
     width:100%;     
-    height: 16px;
+    height: 6%;
     background-color: #7e7e7e;
 }
 .widget_bar div{
